--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,14 @@ default: &default
 
 development:
   <<: *default
-  database: budget_app_development
+  database: budget_app
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password: Welcome126@
+  host: localhost
+  port: 5432
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +64,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: budget_app_test
+  database: budget_app
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password: Welcome126@
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
