--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,22 @@
 databases:
   - name: postgres
     ipAllowList: []
-    databaseName: budget_app
-    user: budget_app
 
 services:
   - type: web
-    name: budget_app
+    name: rails
     env: ruby
-    buildCommand: "./render-build.sh"
+    buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec rails s"
     envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: postgres
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
