--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 databases:
   - name: postgres
     ipAllowList: []
+    plan: free
 
 services:
   - type: web
     name: rails
+    plan: free
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec rails s"
